@@ -19,6 +19,7 @@ Changes in 4.3:
 - Add support for removable storage (286120)
 - Fix typos in several strings (300969, 300781, 300782)
 - Fix suspended overlay not shown on tray icon when ktorrent is started up suspended (301042)
+- Make sure default size of main window, tracker column in tracker view and filename column in file view are sensible (300057)
 
 Changes in 4.2.1:
 - Fix IP filter widget list not getting registered at startup (281245)
